# ThothAI

./: .dockerignore  .editorconfig  .env.docker  .env.docker.example  .env.template  .gitattributes  .gitignore  .mcp.json  .pypi_token  .roomodes  AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  DATA-EXCHANGE.md  DOCKER_DEPLOYMENT_PLAN.md  DOCKER_SETUP_PLAN.md  ENHANCED_WORKFLOW_DOCUMENTATION.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  INFORMIX_FK_UPDATE_SUMMARY.md  INSTALLAZIONE_DOCKER.md  ISTRUZIONI_WINDOWS.md  LOAD_DEV_DB.md  MCP_CONFIG.md  MIGRATION_COMPLETE.md  MODEL-RETRY-REV.md  PLANNING.md  PROJECT_STRUCTURE.md  PUSH_INSTRUCTIONS.md  README.md  Riorganizzazione logging.md  SQL_GENERATOR.md  SSH_TUNNEL_FIX_SUMMARY.md  STARTING-ALL.md  VIDEO_TUTORIAL.md  WARP.md  async_db_elements_creation_plan.md  config.yml  docker-compose.yml  (+32 more)
backend/: .dockerignore  .env.template  .envrc  .gitattributes  .mcp.json  CLAUDE.md  DATABASE_SETUP.md  DEMO_ENVIRONMENT_SETUP_PLAN.md  DOCKER_DEPLOYMENT_PLAN.md  LICENSE.md  README-UNI-IT.md  README.md  README_it.md  WINDOWS_SETUP.md  _env.template  _env_copy  activate_venv.sh  activate_windows.bat  build.sh  check_thothlog.py  clean-docker.sh  cleanup_duplicate_logs.py  create_superuser.py  docker-compose.yml  docker-quiet.sh  entrypoint-backend.sh  fix-docker-volume.bat  fix-docker-volume.py  gunicorn.conf.py  install.bat  install.sh  installer_main.py  library_cleanup_plan.md  load_api_key.py  manage-databases  manage.py  pyproject.local.toml  pyproject.local.toml.example  pyproject.toml  pytest.ini  (+8 more)
backend/.github/workflows/: test-suite.yml
backend/Thoth/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/database-tools/: README.md
backend/database-tools/core-schemas/: debug_import.py  generate-enhanced-schema.py  generate-oracle-schema.py  generate-sqlserver-schema.py  generate-supabase-schema.py  import-california-schools-data.py
backend/exports/staging/: staging_documentation.html
backend/installer/: README_installer.md  chosen_db.json.example  index.html  toml_merger.py
backend/postgres/: Dockerfile
backend/proxy/: Dockerfile  default.conf.tpl  proxy_params  start.sh
backend/restaurant_orders/: admin.py  apps.py  tests.py  views.py
backend/scripts/: build-with-cache.bat  crontab  docker-compose-buildx.bat  docker-start.bat  generate-secrets.sh  init-shared-data.sh  run-tests-local.sh  setup-buildx.bat  start-with-cron.sh  start.sh  test-sqlserver-connection.py  test_informix_fk_new_library.py  trigger-github-tests.sh  view-test-reports.py
backend/setup_csv/: agent.csv  aimodel.csv  basicaimodel.csv  groupprofile.csv  users.csv
backend/templates/: base.html  vertical_base.html
backend/tests/: TESTS.md  conftest.py  test_relational_database_operations.py  test_ssh_tunnel_configuration.py  test_vector_database_operations.py
backend/thoth_ai_backend/: admin.py  apps.py  async_tasks.py  decorators.py  forms.py  mermaid_utils.py  models.py  urls.py  views.py  views_preprocessing_progress.py  views_progress.py
backend/thoth_core/: admin.py  apps.py  auth_callback.py  authentication.py  cache_middleware.py  context_processors.py  dbmanagement.py  health_check.py  logging_setup.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py  widgets.py
backend/vector-database-tools/: README.md  vector-databases.yml
frontend/: .claude.json  .dockerignore  .env.docker.template  .env.local.template  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  build.sh  ca_schools_summary_20250827_183143.csv  ca_schools_summary_20250827_185558.csv  ca_schools_summary_20250827_190003.csv  ca_schools_summary_20250827_190105.csv  ca_schools_summary_20250827_191229.csv  ca_schools_test_20250827_183143.csv  ca_schools_test_20250827_183424.csv  ca_schools_test_20250827_184731.csv  ca_schools_test_20250827_184921.csv  ca_schools_test_20250827_185903.csv  ca_schools_test_20250827_190021.csv  ca_schools_test_20250827_190105.csv  ca_schools_test_20250827_191229.csv  clean-docker.sh  debug-all.sh  docker-entrypoint.sh  entrypoint-frontend.sh  next.config.js  orchestrator-setup.sh  package-lock.json  package.json  pyproject.local.toml.example  pyproject.toml  run.sh  start-all.sh  start.sh  stop-all.sh  tailwind.config.js  test_explanation_feature.md  thoth_workspace.code-workspace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataTable.tsx  OutputBlock.tsx  PaginatedDataTable.tsx  ag-grid-provider.tsx  backend-status.tsx  debug-info.tsx  like-button.tsx  login-form.tsx  logout-confirmation-dialog.tsx  protected-route.tsx  theme-provider.tsx  theme-toggle.tsx  welcome-screen.tsx
frontend/docs/: README-orchestrator.md  auth-bypass-implementation-plan.md  speech-to-text-alternatives.md
frontend/installer/: toml_merger.py
frontend/lib/: api.ts  auth-context.tsx  health-check.ts  post-login-init.ts  sql-generator-api.ts  types.ts  utils.ts
frontend/rules/: activate-venv.md  use-uv.md
frontend/scripts/: docker-entrypoint.sh
frontend/sql_generator/: .dockerignore  Dockerfile  EVALUATION_REVISION_PLAN.md  LOGGING_STANDARD.md  MIGRATION_VERIFICATION_CHECKLIST.md  PHASE_5_TEST_RESULTS.md  README.md  __init__.py  agent_pools_raw.json  ca_schools_summary_20250827_234212.csv  ca_schools_test_20250827_233640.csv  ca_schools_test_20250827_234157.csv  california_schools_limited_report.md  debug_server.py  entrypoint-sql-generator.sh  keyword_extraction.py  main.py  pyproject.toml  run_server.py  test_agent_integration.py  test_backward_compatibility.py  test_ca_schools_curl.sh  test_comprehensive_system.py  test_curl.sh  test_debug_logging.py  test_delimiter_docker.py  test_delimiter_integration.py  test_delimiter_simple.py  test_enhanced_integration.py  test_error_injection.py  test_groq_integration.py  test_groq_structured.py  test_new_evaluation.py  test_performance_improvements.py  test_pipeline_integration.py  test_simplified_evaluation.py
thoth_docs_en/: .gitignore  README.md  mkdocs.yml  pyproject.toml
thoth_docs_en/docs/: index.md  text-to-SQL.md
(+678 files in other folders)
